[package]
name = "healthcare_app"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24"
egui = "0.24"
egui_extras = "0.24"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
tokio = { version = "1.0", features = ["full"] }

[profile.dev]
opt-level = 2 # For better performance in debug builds

[profile.release]
opt-level = 3
lto = true